--- a/app/src/main/res/layout/activity_ad.xml
+++ b/app/src/main/res/layout/activity_ad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.lhy.xposed.mhzs.activity.AdActivity">
+    tools:context="com.lhy.xposed.mhzs.activity.AdSettingActivity">
 
     <FrameLayout
         android:id="@+id/ad_container"
