--- a/app/src/main/res/xml/pref_mhzs_tab.xml
+++ b/app/src/main/res/xml/pref_mhzs_tab.xml
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory
+        app:iconSpaceReserved="false"
         android:summary="自定义主界面底部的按钮"
         android:title="底部栏设置">
-        <SwitchPreference
+        <SwitchPreferenceCompat
+            app:iconSpaceReserved="false"
             android:defaultValue="false"
             android:key="tab2"
             android:title="去除第2个按钮" />
 
-        <SwitchPreference
+        <SwitchPreferenceCompat
+            app:iconSpaceReserved="false"
             android:defaultValue="true"
             android:key="tab3"
             android:title="去除第3个按钮" />
 
-        <SwitchPreference
+        <SwitchPreferenceCompat
+            app:iconSpaceReserved="false"
             android:defaultValue="false"
             android:key="tab4"
             android:title="去除第4个按钮" />
