--- a/app/src/main/res/xml/pref_mhzs.xml
+++ b/app/src/main/res/xml/pref_mhzs.xml
@@ -6,7 +6,7 @@
         android:title="全局设置">
 
         <SwitchPreferenceCompat
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="global_set"
             android:persistent="true"
             android:summary="可设置插件的启用与关闭"
