--- a/app/src/main/res/xml/pref_mhzs.xml
+++ b/app/src/main/res/xml/pref_mhzs.xml
@@ -67,7 +67,7 @@
         <SwitchPreferenceCompat
             android:defaultValue="false"
             android:key="video_url"
-            android:title="获取视频地址（测试功能）"
+            android:title="获取视频地址(测试)"
             android:summary="开启前请参阅使用帮助"
             app:iconSpaceReserved="false" />
 
