--- a/app/src/main/res/xml/pref_mhzs_ad.xml
+++ b/app/src/main/res/xml/pref_mhzs_ad.xml
@@ -28,9 +28,9 @@
             app:iconSpaceReserved="false" />
 
         <SwitchPreferenceCompat
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="ad_marquee"
-            android:title="去除底部滚动广告"
+            android:title="去除底部滚动广告(测试)"
             app:iconSpaceReserved="false" />
     </PreferenceCategory>
 </PreferenceScreen>
