--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -49,6 +49,14 @@
                 android:layout_marginTop="10dp"
                 android:text="支持麻花影视版本：2.6.1"
                 android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/about_bb_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="支持贝贝影视版本：2.6.1"
+                android:textColor="@android:color/black" />
         </LinearLayout>
 
 
